--- a/nativescript/package.json
+++ b/nativescript/package.json
@@ -1,9 +1,9 @@
 {
-    "name": "angular2-seed-advanced",
+    "name": "native-app/app",
     "main": "app.js",
     "version": "0.0.0",
     "nativescript": {
-        "id": "com.yourdomain.appname",
+        "id": "org.devfestflorida.app",
         "tns-ios": {
             "version": "2.2.0"
         },
